objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Stores data of the real estate Property</description>
    <label>Property</label>
    <nameField>
        <displayFormat>PROP-{0000}</displayFormat>
        <label>Property</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>