objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address</description>
    <label>Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>