objects/Property__c/fields/Has_Active_Lease__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True while this property has a lease in Active status. Kept in sync by the Lease Property Lock Sync flow, and used to hide the property from the Generate Lease picker so it can't be double-booked.</description>
    <label>Has Active Lease</label>
    <type>Checkbox</type>
</CustomField>