objects/Property__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>Property Name</description>
    <label>Property Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>