objects/Property__c/fields/Tenant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tenant</description>
    <label>Tenant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>