objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Furnishing_Status__c</columns>
    <columns>Rent__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>